--- a/netlify.toml
+++ b/netlify.toml
@@ -9,3 +9,10 @@
 
 [forms]
   contact = "contact"
+
+[[forms.contact.notifications]]
+  provider = "email"
+  to = "contact@aethertechnologies.se"
+  from = "noreply@netlify.com"
+  subject = "New Contact Form Submission"
+  includeData = true
